--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "hdm_crm",
     "version": "0.1.0",
+
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
@@ -11,7 +12,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.14.2",
-        "react-scripts": "^2.1.3",
+        "react-scripts": "^5.0.1",
+        "resolve": "^1.22.2",
         "run-parallel": "^1.2.0",
         "web-vitals": "^2.1.4"
     },
