--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "axios": "^1.4.0",
         "is-docker": "^3.0.0",
         "react": "^18.2.0",
+        "react-burger-menu": "^3.0.9",
         "react-dom": "^18.2.0",
+        "react-minimal-side-navigation": "^1.9.2",
         "react-router-dom": "^6.14.2",
         "react-scripts": "^2.1.3",
         "resolve": "^1.22.2",
