--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react-scripts": "^2.1.3",
         "resolve": "^1.22.2",
         "run-parallel": "^1.2.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "zxcvbn": "^4.4.2"
     },
     "scripts": {
         "start": "react-scripts start",
